@@ -884,5 +884,9 @@ Thu Mar 30 11:11:13 CEST 2000
 
 	- Synced preproc.y with gram.y.
 	- Fixed comment parsing bug.
+
+Fri Mar 31 08:25:58 CEST 2000
+
+	- Synced preproc.y with gram.y.
 	- Set library version to 3.1.0.
 	- Set ecpg version to 2.7.0.
